# tesikaga_lidar_detector

./: README.md  calibrate.py  check_yaml.py  error.txt  package.xml  requirements.txt  setup.cfg  setup.py
config/: calibration_points.json  detector_params.yaml  transform_matrix.yaml
config /: detector_params.yaml
launch/: calibration.launch.py  detector.launch.py  trigger_calibration.launch.py
scripts/: calculate_transform.py  calibrate_transform.py  capture_point.py  clear_points.py  run_calibration.py
srv/: TriggerCalibration.srv
tesikaga_lidar_detector/: calibration_node.py  math_utils.py  object_cluster_detector_node.py  point_cloud_processor.py  ros_utils.py  udp_sender.py
tesikaga_lidar_detector/scripts/: minimal_importer.py  run_calibration.py
